<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/eancontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_margin_small"
        android:background="@color/colorPrimaryTransparent"
        android:orientation="horizontal"
        android:focusableInTouchMode="true"
        android:paddingTop="@dimen/standard_padding_small">

        <EditText
            android:id="@+id/ean"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/input_hint"
            android:inputType="number"
            android:maxLength="@integer/ean_size"
            android:maxLines="1"
            android:minEms="@integer/ean_width"
            android:paddingEnd="@dimen/isbn_et_padding"
            android:paddingLeft="@dimen/isbn_et_padding"
            android:paddingRight="@dimen/isbn_et_padding"
            android:paddingStart="@dimen/isbn_et_padding"
            android:saveEnabled="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"/>

        <Button
            android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/standard_margin_small"
            android:layout_marginRight="@dimen/standard_margin_small"
            android:text="@string/scan_button"/>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="false"
        android:paddingEnd="@dimen/standard_padding_large"
        android:paddingLeft="@dimen/standard_padding_large"
        android:paddingRight="@dimen/standard_padding_large"
        android:paddingStart="@dimen/standard_padding_large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/standard_padding_large">

                <TextView
                    android:id="@+id/bookTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/head_line"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/bookSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:paddingBottom="@dimen/image_padding"
                    android:textColor="@color/colorPrimary"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/list_title_text_size"
                    android:textStyle="italic"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bookCover"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/book_cover"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/standard_padding_small">

                    <TextView
                        android:id="@+id/authors_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author_label"
                        android:textAllCaps="true"
                        android:visibility="invisible"
                        />

                    <TextView
                        android:id="@+id/authors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/categories_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/standard_margin_small"
                        android:text="@string/category_label"
                        android:textAllCaps="true"
                        android:visibility="invisible"/>

                    <TextView
                        android:id="@+id/categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/add_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:background="@color/colorPrimaryTransparent"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/isbn_et_padding"
        android:paddingLeft="@dimen/isbn_et_padding"
        android:visibility="invisible"
        android:paddingRight="@dimen/isbn_et_padding"
        android:paddingStart="@dimen/isbn_et_padding">

        <Button
            android:id="@+id/delete_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_action_discard"
            android:drawablePadding="0dp"
            android:drawableStart="@drawable/ic_action_discard"
            android:text="@string/cancel_button"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/save_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/ic_menu_save"
            android:drawablePadding="0dp"
            android:drawableStart="@android:drawable/ic_menu_save"
            android:text="@string/ok_button"
            android:visibility="invisible"/>

    </LinearLayout>

</LinearLayout>

