<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/standard_padding_large">

        <TextView
            android:id="@+id/fullBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textIsSelectable="true"
            android:textSize="@dimen/head_line"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/fullBookSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="5"
            android:paddingBottom="@dimen/image_padding"
            android:textColor="@color/colorPrimary"
            android:textIsSelectable="true"
            android:textSize="@dimen/list_title_text_size"
            android:textStyle="italic"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="false"
        android:paddingBottom="@dimen/standard_padding_large"
        android:paddingLeft="@dimen/standard_padding_large"
        android:paddingRight="@dimen/standard_padding_large">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/fullBookCover"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/book_cover"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/standard_padding_small">

                    <TextView
                        android:id="@+id/authors_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author_label"
                        android:textAllCaps="true"
                        />

                    <TextView
                        android:id="@+id/authors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/categories_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/standard_margin_small"
                        android:text="@string/category_label"
                        android:textAllCaps="true"/>

                    <TextView
                        android:id="@+id/categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>


                </LinearLayout>

            </LinearLayout>


            <it.jaschke.alexandria.ui.views.BookContentTextView
                android:id="@+id/fullBookDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_margin_small"
                android:layout_marginTop="@dimen/standard_margin_small"
                android:ellipsize="end"
                android:spacing="@dimen/image_padding"
                android:textSize="@dimen/content_text_size"
                android:textStyle="bold"/>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryTransparent"
        android:paddingEnd="@dimen/isbn_et_padding"
        android:paddingLeft="@dimen/isbn_et_padding"
        android:paddingRight="@dimen/isbn_et_padding"
        android:paddingStart="@dimen/isbn_et_padding">

        <Button
            android:id="@+id/delete_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/back_button"
            android:drawableLeft="@drawable/ic_action_discard"
            android:drawablePadding="0dp"
            android:drawableStart="@drawable/ic_action_discard"
            android:text="@string/delete"/>

        <Button
            android:id="@+id/backButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/back_button"
            android:drawableLeft="@drawable/ic_action_undo"
            android:drawablePadding="0dp"
            android:drawableStart="@drawable/ic_action_undo"
            android:onClick="goBack"
            android:text="@string/back_button"/>

    </LinearLayout>

</LinearLayout>